--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <script src="https://kit.fontawesome.com/8e71640a3b.js" crossorigin="anonymous"></script>
+    <title><Lauther Valladares/></title>
   </head>
   <body>
     <div id="root"></div>
