--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="" href="" />
+  <link rel="icon" type="" href="./src/assets/images/logoL.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/8e71640a3b.js" crossorigin="anonymous"></script>
   <title><Lauther Valladares /></title>
